POWR-678 Sitewide content views

--- a/web/sites/default/config/block.block.bureausandofficesbyaudience.yml
+++ b/web/sites/default/config/block.block.bureausandofficesbyaudience.yml
@@ -1,25 +1,26 @@
-uuid: 88203d1b-e3b8-4b0f-9510-892774c49d9a
+uuid: abe07218-9a1c-4682-854b-ee80123bb92b
 langcode: en
 status: true
 dependencies:
   config:
-    - facets.facet.bureaus_by_audience
+    - facets.facet.bureaus_and_offices_by_audience
   module:
     - facets
     - system
   theme:
     - cloudy
-id: cloudy_bureausandofficesbyaudience
+id: bureausandofficesbyaudience
 theme: cloudy
 region: content
 weight: 1
 provider: null
-plugin: 'facet_block:bureaus_by_audience'
+plugin: 'facet_block:bureaus_and_offices_by_audience'
 settings:
-  id: 'facet_block:bureaus_by_audience'
+  id: 'facet_block:bureaus_and_offices_by_audience'
   label: 'Bureaus and offices by audience'
   provider: facets
-  label_display: visible
+  label_display: '0'
+  block_id: bureausandofficesbyaudience
 visibility:
   request_path:
     id: request_path
