--- a/web/sites/default/config/block.block.bureausandofficesbytopic.yml
+++ b/web/sites/default/config/block.block.bureausandofficesbytopic.yml
@@ -1,25 +1,26 @@
-uuid: 97e0dff4-1e0c-4f31-9055-24e9d41832ed
+uuid: 472b557d-d35b-4457-8beb-236ce5f9028f
 langcode: en
 status: true
 dependencies:
   config:
-    - facets.facet.bureaus_by_topic
+    - facets.facet.bureaus_and_offices_by_topic
   module:
     - facets
     - system
   theme:
     - cloudy
-id: cloudy_bureausandofficesbytopic
+id: bureausandofficesbytopic
 theme: cloudy
 region: content
 weight: 0
 provider: null
-plugin: 'facet_block:bureaus_by_topic'
+plugin: 'facet_block:bureaus_and_offices_by_topic'
 settings:
-  id: 'facet_block:bureaus_by_topic'
+  id: 'facet_block:bureaus_and_offices_by_topic'
   label: 'Bureaus and offices by topic'
   provider: facets
-  label_display: visible
+  label_display: '0'
+  block_id: bureausandofficesbytopic
 visibility:
   request_path:
     id: request_path
