--- a/web/sites/default/config/block.block.cloudy_services_by_action.yml
+++ b/web/sites/default/config/block.block.cloudy_services_by_action.yml
@@ -19,7 +19,8 @@ settings:
   id: 'facet_block:services_by_action'
   label: 'Services by action'
   provider: facets
-  label_display: visible
+  label_display: '0'
+  block_id: cloudy_services_by_action
 visibility:
   request_path:
     id: request_path
