--- a/web/sites/default/config/core.entity_view_display.group.project.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.group.project.teaser.yml
@@ -6,6 +6,12 @@ dependencies:
     - core.entity_view_mode.group.teaser
     - field.field.group.project.field_audience
     - field.field.group.project.field_date_time_range
+    - field.field.group.project.field_enable_documents_menu_item
+    - field.field.group.project.field_enable_events_menu_item
+    - field.field.group.project.field_enable_guides_and_informat
+    - field.field.group.project.field_enable_news_and_notices_me
+    - field.field.group.project.field_enable_projects_menu_item
+    - field.field.group.project.field_featured_media
     - field.field.group.project.field_legacy_path
     - field.field.group.project.field_parent_group
     - field.field.group.project.field_shortname_or_acronym
@@ -20,7 +26,7 @@ bundle: project
 mode: teaser
 content:
   field_summary:
-    weight: 1
+    weight: 0
     label: hidden
     settings:
       link_to_entity: false
@@ -55,28 +61,21 @@ content:
             fi-def-at: false
     type: string
     region: content
-  label:
-    label: hidden
-    type: string
-    weight: 0
-    region: content
-    settings:
-      link_to_entity: true
-    third_party_settings:
-      ds:
-        ft:
-          id: default
-          settings:
-            lb: ''
-            lb-col: false
-            classes: {  }
 hidden:
   changed: true
   created: true
   field_audience: true
   field_date_time_range: true
+  field_enable_documents_menu_item: true
+  field_enable_events_menu_item: true
+  field_enable_guides_and_informat: true
+  field_enable_news_and_notices_me: true
+  field_enable_projects_menu_item: true
+  field_featured_media: true
   field_legacy_path: true
   field_parent_group: true
   field_shortname_or_acronym: true
   field_topics: true
+  group_site_menu_entity_view_1: true
+  label: true
   uid: true
