--- a/web/sites/default/config/facets.facet.bureaus_and_offices_by_topic.yml
+++ b/web/sites/default/config/facets.facet.bureaus_and_offices_by_topic.yml
@@ -1,20 +1,20 @@
-uuid: 6ecec58b-c40d-4bc8-98f4-552f6e932cfc
+uuid: e083e5fa-5853-4bf1-a8bc-4f25d822dbad
 langcode: en
 status: true
 dependencies:
   config:
-    - search_api.index.bureaus
-    - views.view.bureaus_and_offices
+    - search_api.index.full_index
+    - views.view.bureaus_and_offices_index
   module:
     - search_api
-id: bureaus_by_topic
+id: bureaus_and_offices_by_topic
 name: 'Bureaus and offices by topic'
-url_alias: bureaus_by_topic
-weight: 0
+url_alias: bureaus_and_offices_by_topic
+weight: -1
 min_count: 1
 show_only_one_result: false
-field_identifier: name_topics
-facet_source_id: 'search_api:views_page__bureaus_and_offices__page_1'
+field_identifier: group_topic_name
+facet_source_id: 'search_api:views_page__bureaus_and_offices_index__page_1'
 widget:
   type: links
   config:
@@ -34,27 +34,27 @@ processor_configs:
   active_widget_order:
     processor_id: active_widget_order
     weights:
-      sort: -10
+      sort: 20
     settings:
       sort: ASC
   count_widget_order:
     processor_id: count_widget_order
     weights:
-      sort: -9
+      sort: 30
     settings:
       sort: DESC
   display_value_widget_order:
     processor_id: display_value_widget_order
     weights:
-      sort: -8
+      sort: 40
     settings:
       sort: ASC
   url_processor_handler:
     processor_id: url_processor_handler
     weights:
-      pre_query: -10
-      build: -10
+      pre_query: 50
+      build: 15
     settings: {  }
 empty_behavior:
   behavior: none
-show_title: false
+show_title: true
