--- a/web/sites/default/config/facets.facet.services_by_action.yml
+++ b/web/sites/default/config/facets.facet.services_by_action.yml
@@ -3,18 +3,18 @@ langcode: en
 status: true
 dependencies:
   config:
-    - search_api.index.services
-    - views.view.services_index
+    - search_api.index.full_index
+    - views.view.services_fullindex
   module:
     - search_api
 id: services_by_action
 name: 'Services by action'
 url_alias: services_by_action
-weight: 0
+weight: -2
 min_count: 1
 show_only_one_result: false
-field_identifier: name_actions
-facet_source_id: 'search_api:views_page__services_index__page_1'
+field_identifier: action_name
+facet_source_id: 'search_api:views_page__services_fullindex__page_1'
 widget:
   type: links
   config:
@@ -64,4 +64,4 @@ processor_configs:
     settings: {  }
 empty_behavior:
   behavior: none
-show_title: false
+show_title: true
