--- a/web/sites/default/config/search_api.index.full_index.yml
+++ b/web/sites/default/config/search_api.index.full_index.yml
@@ -2,26 +2,49 @@ uuid: 0091e8e1-2015-43a3-9c23-4951e7bee821
 langcode: en
 status: true
 dependencies:
-  module:
-    - group
-    - search_api_solr
-    - node
-    - taxonomy
-    - search_api
-    - portland
   config:
+    - field.storage.group.field_audience
+    - field.storage.group.field_date_time_range
     - field.storage.group.field_official_organization_name
     - field.storage.group.field_official_title
     - field.storage.group.field_shortname_or_acronym
     - field.storage.group.field_summary
+    - field.storage.group.field_topics
+    - field.storage.node.field_audience
     - field.storage.node.field_body
+    - field.storage.node.field_community_actions
+    - field.storage.node.field_end_date
+    - field.storage.node.field_end_time
+    - field.storage.node.field_popular
+    - field.storage.node.field_published_on
+    - field.storage.node.field_start_date
+    - field.storage.node.field_start_time
     - field.storage.node.field_summary
+    - field.storage.node.field_topics
     - search_api.server.searchstax
+  module:
+    - taxonomy
+    - group
+    - search_api_solr
+    - node
+    - search_api
+    - portland
 id: full_index
 name: 'Full index'
 description: 'Full index of all content entities on Portland.gov'
 read_only: false
 field_settings:
+  action_name:
+    label: 'Community actions » Taxonomy term » Name'
+    datasource_id: 'entity:node'
+    property_path: 'field_community_actions:entity:name'
+    type: string
+    dependencies:
+      config:
+        - field.storage.node.field_community_actions
+      module:
+        - taxonomy
+        - taxonomy
   aggregated_topic:
     label: 'Aggregated topic'
     property_path: aggregated_field
@@ -31,6 +54,17 @@ field_settings:
       fields:
         - 'entity:group/field_topics'
         - 'entity:node/field_topics'
+  audience_name:
+    label: 'Audience » Taxonomy term » Name'
+    datasource_id: 'entity:node'
+    property_path: 'field_audience:entity:name'
+    type: string
+    dependencies:
+      config:
+        - field.storage.node.field_audience
+      module:
+        - taxonomy
+        - taxonomy
   content_id:
     label: 'Content ID'
     datasource_id: 'entity:node'
@@ -55,6 +89,30 @@ field_settings:
     dependencies:
       config:
         - field.storage.node.field_body
+  field_date_time_range:
+    label: 'Date/time range'
+    datasource_id: 'entity:group'
+    property_path: field_date_time_range
+    type: date
+    dependencies:
+      config:
+        - field.storage.group.field_date_time_range
+  field_end_date:
+    label: 'End date'
+    datasource_id: 'entity:node'
+    property_path: field_end_date
+    type: date
+    dependencies:
+      config:
+        - field.storage.node.field_end_date
+  field_end_time:
+    label: 'End time'
+    datasource_id: 'entity:node'
+    property_path: field_end_time
+    type: integer
+    dependencies:
+      config:
+        - field.storage.node.field_end_time
   field_official_organization_name:
     label: 'Official organization name'
     datasource_id: 'entity:group'
@@ -71,6 +129,22 @@ field_settings:
     dependencies:
       config:
         - field.storage.group.field_official_title
+  field_popular:
+    label: Popular
+    datasource_id: 'entity:node'
+    property_path: field_popular
+    type: boolean
+    dependencies:
+      config:
+        - field.storage.node.field_popular
+  field_published_on:
+    label: 'Published on'
+    datasource_id: 'entity:node'
+    property_path: field_published_on
+    type: date
+    dependencies:
+      config:
+        - field.storage.node.field_published_on
   field_shortname_or_acronym:
     label: 'Shortname or acronym'
     datasource_id: 'entity:group'
@@ -79,6 +153,22 @@ field_settings:
     dependencies:
       config:
         - field.storage.group.field_shortname_or_acronym
+  field_start_date:
+    label: 'Start date'
+    datasource_id: 'entity:node'
+    property_path: field_start_date
+    type: date
+    dependencies:
+      config:
+        - field.storage.node.field_start_date
+  field_start_time:
+    label: 'Start time'
+    datasource_id: 'entity:node'
+    property_path: field_start_time
+    type: integer
+    dependencies:
+      config:
+        - field.storage.node.field_start_time
   field_summary:
     label: Summary
     datasource_id: 'entity:group'
@@ -95,6 +185,17 @@ field_settings:
     dependencies:
       config:
         - field.storage.node.field_summary
+  group_audience_name:
+    label: 'Audience » Taxonomy term » Name'
+    datasource_id: 'entity:group'
+    property_path: 'field_audience:entity:name'
+    type: string
+    dependencies:
+      config:
+        - field.storage.group.field_audience
+      module:
+        - taxonomy
+        - taxonomy
   group_id:
     label: 'Group ID'
     datasource_id: 'entity:group'
@@ -103,6 +204,17 @@ field_settings:
     dependencies:
       module:
         - group
+  group_topic_name:
+    label: 'Topics » Taxonomy term » Name'
+    datasource_id: 'entity:group'
+    property_path: 'field_topics:entity:name'
+    type: string
+    dependencies:
+      config:
+        - field.storage.group.field_topics
+      module:
+        - taxonomy
+        - taxonomy
   label:
     label: Title
     datasource_id: 'entity:group'
@@ -113,7 +225,7 @@ field_settings:
       module:
         - group
   label_1:
-    label: Title
+    label: 'Title (Phonetic)'
     datasource_id: 'entity:group'
     property_path: label
     type: solr_text_phonetic
@@ -131,7 +243,7 @@ field_settings:
       module:
         - taxonomy
   name_1:
-    label: Name
+    label: 'Name (Phonetic)'
     datasource_id: 'entity:taxonomy_term'
     property_path: name
     type: solr_text_phonetic
@@ -140,7 +252,7 @@ field_settings:
       module:
         - taxonomy
   name_2:
-    label: Name
+    label: 'Name (String)'
     datasource_id: 'entity:taxonomy_term'
     property_path: name
     type: string
@@ -185,7 +297,7 @@ field_settings:
       module:
         - node
   title_1:
-    label: Title
+    label: 'Title (Phonetic)'
     datasource_id: 'entity:node'
     property_path: title
     type: solr_text_phonetic
@@ -193,6 +305,17 @@ field_settings:
     dependencies:
       module:
         - node
+  topic_name:
+    label: 'Topics » Taxonomy term » Name'
+    datasource_id: 'entity:node'
+    property_path: 'field_topics:entity:name'
+    type: string
+    dependencies:
+      config:
+        - field.storage.node.field_topics
+      module:
+        - taxonomy
+        - taxonomy
   type:
     label: 'Group type'
     datasource_id: 'entity:group'
@@ -202,7 +325,7 @@ field_settings:
       module:
         - group
   type_1:
-    label: 'Group type'
+    label: 'Group type_1'
     datasource_id: 'entity:group'
     property_path: type
     type: string
@@ -254,12 +377,16 @@ processor_settings:
   html_filter:
     all_fields: true
     fields:
+      - action_name
+      - audience_name
       - description
       - field_official_organization_name
       - field_official_title
       - field_shortname_or_acronym
       - field_summary
       - field_summary_1
+      - group_audience_name
+      - group_topic_name
       - label
       - label_1
       - name
@@ -269,6 +396,7 @@ processor_settings:
       - rendered_item
       - title
       - title_1
+      - topic_name
       - type
       - type_1
       - type_2
