--- a/web/sites/default/config/core.entity_view_display.group.bureau_office.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.group.bureau_office.teaser.yml
@@ -8,8 +8,18 @@ dependencies:
     - field.field.group.bureau_office.field_audience
     - field.field.group.bureau_office.field_building
     - field.field.group.bureau_office.field_email
+    - field.field.group.bureau_office.field_enable_documents_menu_item
+    - field.field.group.bureau_office.field_enable_events_menu_item
+    - field.field.group.bureau_office.field_enable_guides_and_informat
+    - field.field.group.bureau_office.field_enable_news_and_notices_me
+    - field.field.group.bureau_office.field_enable_offices_and_program
+    - field.field.group.bureau_office.field_enable_programs_menu_item
+    - field.field.group.bureau_office.field_enable_projects_menu_item
+    - field.field.group.bureau_office.field_enable_services_and_inform
+    - field.field.group.bureau_office.field_featured_media
     - field.field.group.bureau_office.field_legacy_path
     - field.field.group.bureau_office.field_logo
+    - field.field.group.bureau_office.field_menu_link
     - field.field.group.bureau_office.field_official_organization_name
     - field.field.group.bureau_office.field_parent_group
     - field.field.group.bureau_office.field_phone
@@ -17,8 +27,6 @@ dependencies:
     - field.field.group.bureau_office.field_summary
     - field.field.group.bureau_office.field_topics
     - group.type.bureau_office
-  module:
-    - ds
 id: group.bureau_office.teaser
 targetEntityType: group
 bundle: bureau_office
@@ -26,48 +34,12 @@ mode: teaser
 content:
   field_summary:
     type: string
-    weight: 1
+    weight: 0
     region: content
     label: hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
-  label:
-    label: hidden
-    type: string
-    weight: 0
-    region: content
-    settings:
-      link_to_entity: true
-    third_party_settings:
-      ds:
-        ft:
-          id: expert
-          settings:
-            lb: ''
-            prefix: ''
-            lbw-el: ''
-            lbw-cl: ''
-            lbw-at: ''
-            ow: true
-            ow-el: h2
-            ow-cl: ''
-            ow-at: ''
-            fis-el: ''
-            fis-cl: ''
-            fis-at: ''
-            fi-el: ''
-            fi-cl: ''
-            fi-at: ''
-            suffix: ''
-            lbw: false
-            lb-col: false
-            ow-def-at: false
-            ow-def-cl: false
-            fis: false
-            fis-def-at: false
-            fi: false
-            fi-def-at: false
 hidden:
   changed: true
   created: true
@@ -75,11 +47,23 @@ hidden:
   field_audience: true
   field_building: true
   field_email: true
+  field_enable_documents_menu_item: true
+  field_enable_events_menu_item: true
+  field_enable_guides_and_informat: true
+  field_enable_news_and_notices_me: true
+  field_enable_offices_and_program: true
+  field_enable_programs_menu_item: true
+  field_enable_projects_menu_item: true
+  field_enable_services_and_inform: true
+  field_featured_media: true
   field_legacy_path: true
   field_logo: true
+  field_menu_link: true
   field_official_organization_name: true
   field_parent_group: true
   field_phone: true
   field_shortname_or_acronym: true
   field_topics: true
+  group_site_menu_entity_view_1: true
+  label: true
   uid: true
