--- a/web/sites/default/config/core.entity_view_display.group.elected_official.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.group.elected_official.teaser.yml
@@ -8,7 +8,14 @@ dependencies:
     - field.field.group.elected_official.field_building
     - field.field.group.elected_official.field_bureaus
     - field.field.group.elected_official.field_email
+    - field.field.group.elected_official.field_enable_events_menu_item
+    - field.field.group.elected_official.field_enable_guides_and_informat
+    - field.field.group.elected_official.field_enable_news_and_notices_me
+    - field.field.group.elected_official.field_enable_offices_and_program
+    - field.field.group.elected_official.field_enable_projects_menu_item
+    - field.field.group.elected_official.field_legacy_path
     - field.field.group.elected_official.field_logo
+    - field.field.group.elected_official.field_menu_link
     - field.field.group.elected_official.field_official_title
     - field.field.group.elected_official.field_phone
     - field.field.group.elected_official.field_shortname_or_acronym
@@ -20,21 +27,13 @@ bundle: elected_official
 mode: teaser
 content:
   field_summary:
-    weight: 1
-    label: hidden
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
-    region: content
-  label:
-    label: hidden
-    type: string
     weight: 0
-    region: content
+    label: hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
+    type: string
+    region: content
 hidden:
   changed: true
   created: true
@@ -42,8 +41,17 @@ hidden:
   field_building: true
   field_bureaus: true
   field_email: true
+  field_enable_events_menu_item: true
+  field_enable_guides_and_informat: true
+  field_enable_news_and_notices_me: true
+  field_enable_offices_and_program: true
+  field_enable_projects_menu_item: true
+  field_legacy_path: true
   field_logo: true
+  field_menu_link: true
   field_official_title: true
   field_phone: true
   field_shortname_or_acronym: true
+  group_site_menu_entity_view_1: true
+  label: true
   uid: true
