--- a/web/sites/default/config/core.entity_view_display.node.page.related.yml
+++ b/web/sites/default/config/core.entity_view_display.node.page.related.yml
@@ -73,6 +73,7 @@ hidden:
   field_group: true
   field_legacy_path: true
   field_page_type: true
+  field_popular: true
   field_related_content: true
   field_reviewer: true
   field_summary: true
