--- a/composer.json
+++ b/composer.json
@@ -53,7 +53,7 @@
         "drupal/eva": "^1.3",
         "drupal/extlink": "^1.1",
         "drupal/facets": "^1.0",
-        "drupal/field_defaults": "^1.0@RC",
+        "drupal/field_defaults": "^1.0",
         "drupal/field_group": "^3.0",
         "drupal/field_permissions": "^1.0@RC",
         "drupal/fixed_block_content": "^1.0",
@@ -153,6 +153,12 @@
             },
             "drupal/ctools": {
                 "Views exposed filters missing autosubmit option https://www.drupal.org/node/2475595": "https://www.drupal.org/files/issues/2475595-ctools-autocomplete-fix-24.patch"
+            },
+            "drupal/content_lock": {
+                "2919019 - content_lock_entity_operation doesn't work if the entity list is cached": "https://www.drupal.org/files/issues/content_lock-caching-invalidation-2919019-3.patch"
+            },
+            "drupal/field_defaults": {
+                "3040924 - Undefined property $batch_field_defaults": "https://www.drupal.org/files/issues/2019-03-18/notice-undefined-property-batch-field-defaults-2.patch"
             },
             "drupal/group": {
                 "2774827 - node:group functionality for adding node:group:title": "https://www.drupal.org/files/issues/group_add-node-group-tokens-2774827-22.patch",
