POWR-763 - changed parent group filter to be a text field

--- a/web/sites/default/config/views.view.admin_groups.yml
+++ b/web/sites/default/config/views.view.admin_groups.yml
@@ -855,33 +855,33 @@ display:
           entity_type: group
           entity_field: type
           plugin_id: bundle
-        field_parent_group_target_id:
-          id: field_parent_group_target_id
-          table: group__field_parent_group
-          field: field_parent_group_target_id
-          relationship: none
+        label_1:
+          id: label_1
+          table: groups_field_data
+          field: label
+          relationship: field_parent_group
           group_type: group
           admin_label: ''
-          operator: or
-          value: {  }
+          operator: contains
+          value: ''
           group: 1
           exposed: true
           expose:
-            operator_id: field_parent_group_target_id_op
-            label: 'Parent group'
+            operator_id: label_1_op
+            label: 'Parent group contains'
             description: ''
             use_operator: false
-            operator: field_parent_group_target_id_op
-            identifier: field_parent_group_target_id
+            operator: label_1_op
+            identifier: label_1
             required: false
             remember: false
-            multiple: true
+            multiple: false
             remember_roles:
               authenticated: authenticated
               anonymous: '0'
               administrator: '0'
               sitewide_editor: '0'
-            reduce: false
+            placeholder: ''
           is_grouped: false
           group_info:
             label: ''
@@ -894,19 +894,9 @@ display:
             default_group: All
             default_group_multiple: {  }
             group_items: {  }
-          reduce_duplicates: false
-          handler: 'default:group'
-          handler_settings:
-            target_bundles:
-              bureau_office: bureau_office
-              program: program
-            sort:
-              field: label
-              direction: ASC
-            auto_create: false
-            auto_create_bundle: ''
-          widget: select
-          plugin_id: entity_reference
+          entity_type: group
+          entity_field: label
+          plugin_id: string
       sorts: {  }
       title: 'Admin: Groups'
       header:
