removing dependencies for information content types

--- a/web/sites/default/config/workflows.workflow.editorial.yml
+++ b/web/sites/default/config/workflows.workflow.editorial.yml
@@ -7,6 +7,8 @@ dependencies:
     - node.type.building
     - node.type.city_service
     - node.type.event
+    - node.type.guide
+    - node.type.information
     - node.type.news
     - node.type.notification
     - node.type.page
@@ -87,6 +89,8 @@ type_settings:
       - building
       - city_service
       - event
+      - guide
+      - information
       - news
       - notification
       - page
