--- a/web/sites/default/config/search_api.index.full_index.yml
+++ b/web/sites/default/config/search_api.index.full_index.yml
@@ -3,10 +3,10 @@ langcode: en
 status: true
 dependencies:
   module:
-    - node
-    - taxonomy
     - group
     - search_api_solr
+    - node
+    - taxonomy
     - search_api
     - portland
   config:
@@ -14,6 +14,7 @@ dependencies:
     - field.storage.group.field_official_title
     - field.storage.group.field_shortname_or_acronym
     - field.storage.group.field_summary
+    - field.storage.node.field_body
     - field.storage.node.field_summary
     - search_api.server.searchstax
 id: full_index
@@ -46,6 +47,14 @@ field_settings:
     dependencies:
       module:
         - taxonomy
+  field_body:
+    label: Body
+    datasource_id: 'entity:node'
+    property_path: field_body
+    type: integer
+    dependencies:
+      config:
+        - field.storage.node.field_body
   field_official_organization_name:
     label: 'Official organization name'
     datasource_id: 'entity:group'
