--- a/web/sites/default/config/views.view.group_notifications.yml
+++ b/web/sites/default/config/views.view.group_notifications.yml
@@ -1,12 +1,14 @@
 uuid: d5648d3e-b593-4791-a2b7-754039d7d115
 langcode: en
-status: false
+status: true
 dependencies:
   config:
     - core.entity_view_mode.node.featured
     - core.entity_view_mode.node.teaser
+    - field.storage.node.field_body
   module:
     - datetime
+    - entity_reference_revisions
     - group
     - node
     - user
@@ -745,6 +747,69 @@ display:
           entity_type: node
           entity_field: changed
           plugin_id: field
+        field_body:
+          id: field_body
+          table: node__field_body
+          field: field_body
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: target_id
+          type: entity_reference_revisions_entity_view
+          settings:
+            view_mode: default
+          group_column: ''
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ''
+          field_api_classes: false
+          plugin_id: field
       header: {  }
       pager:
         type: some
@@ -819,4 +884,6 @@ display:
         - url
         - 'user.node_grants:view'
         - user.permissions
-      tags: {  }
+      tags:
+        - 'config:field.storage.node.field_body'
+        - extensions
