POWR-781 Add ds card templates

--- a/web/sites/default/config/core.entity_view_display.node.news.featured.yml
+++ b/web/sites/default/config/core.entity_view_display.node.news.featured.yml
@@ -28,7 +28,7 @@ third_party_settings:
     default: default
   ds:
     layout:
-      id: cloudy_featured-with-image
+      id: cloudy_card--large
       library: null
       disable_css: false
       entity_classes: all_classes
