--- a/web/themes/custom/cloudy/cloudy.layouts.yml
+++ b/web/themes/custom/cloudy/cloudy.layouts.yml
@@ -1,7 +1,18 @@
-cloudy_featured-with-image:
-  label: Featured with image
+cloudy_card--small:
+  label: Card small
   category: Cloudy
-  template: templates/ds/layout--ds-featured-with-image
+  template: templates/ds/layout--ds-card--small
+  class: '\Drupal\ds\Plugin\DsLayout'
+  regions:
+    first:
+      label: Content
+    second:
+      label: Image
+
+cloudy_card--large:
+  label: Card large
+  category: Cloudy
+  template: templates/ds/layout--ds-card--large
   class: '\Drupal\ds\Plugin\DsLayout'
   regions:
     first:
