--- a/web/sites/default/config/core.entity_view_display.node.news.related.yml
+++ b/web/sites/default/config/core.entity_view_display.node.news.related.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.node.news.field_body_content
     - field.field.node.news.field_feature_this_content
     - field.field.node.news.field_feature_until
+    - field.field.node.news.field_featured_media
     - field.field.node.news.field_group
     - field.field.node.news.field_legacy_path
     - field.field.node.news.field_published_on
@@ -27,7 +28,7 @@ third_party_settings:
     default: default
   ds:
     layout:
-      id: cloudy_card
+      id: cloudy_card--small
       library: null
       disable_css: false
       entity_classes: all_classes
@@ -44,6 +45,8 @@ third_party_settings:
     regions:
       first:
         - node_title
+      second:
+        - field_featured_media
     fields:
       node_title:
         plugin_id: node_title
@@ -64,7 +67,23 @@ id: node.news.related
 targetEntityType: node
 bundle: news
 mode: related
-content: {  }
+content:
+  field_featured_media:
+    type: entity_reference_entity_view
+    weight: 1
+    region: second
+    label: hidden
+    settings:
+      view_mode: featured
+      link: false
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
 hidden:
   content_moderation_control: true
   field_body_content: true
