POWR-781 Update content type featured display to use ds templates

--- a/web/sites/default/config/core.entity_view_display.node.event.related.yml
+++ b/web/sites/default/config/core.entity_view_display.node.event.related.yml
@@ -9,6 +9,7 @@ dependencies:
     - field.field.node.event.field_end_date
     - field.field.node.event.field_end_time
     - field.field.node.event.field_event_location
+    - field.field.node.event.field_featured_media
     - field.field.node.event.field_group
     - field.field.node.event.field_legacy_path
     - field.field.node.event.field_related_content
@@ -32,7 +33,7 @@ third_party_settings:
     default: default
   ds:
     layout:
-      id: cloudy_card
+      id: cloudy_card--small
       library: null
       disable_css: false
       entity_classes: all_classes
@@ -305,6 +306,7 @@ hidden:
   content_moderation_control: true
   field_body_content: true
   field_event_location: true
+  field_featured_media: true
   field_group: true
   field_legacy_path: true
   field_related_content: true
