--- a/web/sites/default/config/core.entity_view_display.node.city_service.related.yml
+++ b/web/sites/default/config/core.entity_view_display.node.city_service.related.yml
@@ -28,7 +28,7 @@ third_party_settings:
     default: default
   ds:
     layout:
-      id: cloudy_card
+      id: cloudy_card--small
       library: null
       disable_css: false
       entity_classes: all_classes
