POWR-781 Update display mode on group news list pages

--- a/web/sites/default/config/views.view.group_news.yml
+++ b/web/sites/default/config/views.view.group_news.yml
@@ -521,7 +521,7 @@ display:
         type: 'entity:node'
         options:
           relationship: none
-          view_mode: teaser
+          view_mode: featured
     cache_metadata:
       max-age: -1
       contexts:
