--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
         "drupal-pattern-lab/add-attributes-twig-extension": "^1.0",
         "drupal-pattern-lab/bem-twig-extension": "^1.0",
         "drupal-pattern-lab/unified-twig-extensions": "^0.1",
-        "drupal/address": "^1.3",
+        "drupal/address": "~1.4",
         "drupal/admin_toolbar": "^1.18",
         "drupal/adminimal_admin_toolbar": "^1.5",
         "drupal/adminimal_theme": "^1.3",
