POWR-919 downgrade http-foundation per issue 3044387

--- a/composer.json
+++ b/composer.json
@@ -94,6 +94,7 @@
         "drupal/webform": "^5.1",
         "drush/drush": "^9.5.0",
         "roave/security-advisories": "dev-master",
+        "symfony/http-foundation": "3.4.23",
         "webflo/drupal-finder": "^1.0.0",
         "webmozart/path-util": "^2.3",
         "wikimedia/composer-merge-plugin": "^1.4"
